--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Marisol Lazo</title>
 </head>
 <body>
@@ -13,40 +13,36 @@
 				<img src="img/img1.png" alt=""/>
 			</div>
 			<div class="container social-media">
-				<a href="https://www.facebook.com/marisol.lazo.5" target="_blank"><img src="img/facebook.png" alt=""/></a>
-				<a href="https://www.instagram.com/marisol_lazo/" target="_blank"><img src="img/instagram.png" alt=""/></a>
-				<a href="https://www.linkedin.com/in/marisol-lazo-9b0b0b1b1/" target="_blank"><img src="img/youtube.png" alt=""/></a>
-				<a href="https://www.linkedin.com/in/marisol-lazo-9b0b0b1b1/" target="_blank"><img src="img/whatsapp.png" alt=""/></a>
+				<a href="https://www.facebook.com/marisol.lazo.7334?mibextid=ZbWKwL" target="_blank"><img src="img/facebook.png" alt=""/></a>
+				<a href="https://instagram.com/marisol_lazo19?igshid=OTk0YzhjMDVlZA==" target="_blank"><img src="img/instagram.png" alt=""/></a>
+				<a href="https://youtube.com/channel/UCfQNA_iRpVYBCt7W_40fHxQ" target="_blank"><img src="img/youtube.png" alt=""/></a>
+				<a href="#" target="_blank"><img src="img/whatsapp.png" alt=""/></a>
 			</div>
 			<div class="container navigation">
-				<div class="navigation-item">
-					<a href="http://" target="_blank" rel="noopener noreferrer">Informacion</a>
+				<div class="navigation-row">
+					<a class="navigation-item" href="#" target="_blank" rel="noopener noreferrer">Informacion</a>
+					<a class="navigation-item" href="#" target="_blank" rel="noopener noreferrer">Imagines</a>
 				</div>
-				<div class="navigation-item">
-					<a href="http://" target="_blank" rel="noopener noreferrer">Imagines</a>
-				</div>
-				<div class="navigation-item">
-					<a href="http://" target="_blank" rel="noopener noreferrer">Videos</a>
-				</div>
-				<div class="navigation-item">
-					<a href="http://" target="_blank" rel="noopener noreferrer">Logros Obtendos</a>
+				<div class="navigation-row">
+					<a class="navigation-item" href="#" target="_blank" rel="noopener noreferrer">Videos</a>
+					<a class="navigation-item" href="#" target="_blank" rel="noopener noreferrer">Logros Obtendos</a>
 				</div>
 			</div>
 			<div class="container gallery">
+				<div class="div gallery-row">
+					<div class="gallery-img">
+						<img src="img/img5.jpg" alt="" />
+					</div>
+					<div class="gallery-img">
+						<img src="img/img4.jpg" alt="" />
+					</div>
+				</div>
 				<div class="div gallery-row">
 					<div class="gallery-img">
 						<img src="img/img2.jpg" alt="" />
 					</div>
 					<div class="gallery-img">
 						<img src="img/img3.jpg" alt="" />
-					</div>
-				</div>
-				<div class="div gallery-row">
-					<div class="gallery-img">
-						<img src="img/img4.jpg" alt="" />
-					</div>
-					<div class="gallery-img">
-						<img src="img/img5.jpg" alt="" />
 					</div>
 				</div>
 			</div>
